pkgs/artifacts-cli/tests/tui/snapshots/tests__tui__view_tests__artifact_list_initial.snap
---
source: tests/tui/view_tests.rs
expression: output
---
┌Artifacts (3) - j/k: move, Enter: generate, a: all, q: quit─────────┐
│> ○ [N] machine-one/ssh-key                                         │
│  ✓ [N] machine-two/api-token                                       │
│  ◐ [H] user@host/gpg-key                                           │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
└────────────────────────────────────────────────────────────────────┘
