pkgs/artifacts-cli/tests/tui/snapshots/tests__tui__view_tests__progress_running_generator.snap
---
source: tests/tui/view_tests.rs
expression: output
---
Generating: ssh-key

────────────────────────────────────────────────────────────
⟳ Running generator
○ Serializing files



┌Output────────────────────────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
