pkgs/artifacts-cli/tests/tui/snapshots/tests__tui__view_tests__progress_serializing.snap
---
source: tests/tui/view_tests.rs
expression: output
---
Generating: ssh-key

────────────────────────────────────────────────────────────
✓ Running generator
⟳ Serializing files



┌Output────────────────────────────────────────────────────┐
│Generator completed successfully                          │
│Starting serialization...                                 │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
