pkgs/artifacts-cli/tests/tui/snapshots/tests__tui__view_tests__prompt_multiline_mode.snap
---
source: tests/tui/view_tests.rs
expression: output
---
Prompt: certificate [1/1]

────────────────────────────────────────────────────────────
Field: pem
Paste the certificate PEM content


┌Input─────────────────────────────────────────────────────┐
│[multiline] > -----BEGIN CERT-----█                       │
└──────────────────────────────────────────────────────────┘
Ctrl+D: submit | Enter: newline | Esc: cancel
