pkgs/artifacts-cli/tests/tui/snapshots/tests__tui__view_tests__prompt_with_input.snap
---
source: tests/tui/view_tests.rs
expression: output
---
Prompt: ssh-key [1/1]

────────────────────────────────────────────────────────────
Field: passphrase
Enter the SSH key passphrase


┌Input─────────────────────────────────────────────────────┐
│[line] > my-secret-pass█                                  │
└──────────────────────────────────────────────────────────┘
Enter: submit | Esc: cancel
